--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap"
       rel="stylesheet"
     /> -->
+
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
