add: pictures to slider

--- a/index.html
+++ b/index.html
@@ -149,13 +149,46 @@
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="image/slide.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-1.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="image/slide.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-2.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="image/slide.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-3.jpg"
+                    alt="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-4.jpg"
+                    alt="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-5.jpg"
+                    alt="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-6.jpg"
+                    alt="slide"
+                  />
                 </div>
               </div>
               <!-- If we need navigation buttons -->
