--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper-container">
               <!-- Additional required wrapper -->
@@ -197,7 +197,7 @@
             </div>
             <!--/.swiper-container  -->
           </div>
-          <!-- /.slider -->
+          <!-- /.slider hotel__slider -->
           <div class="hotel-right">
             <div class="booking">
               <div class="booking__info">
@@ -249,7 +249,7 @@
               ></iframe> -->
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.0412755648576!2d98.2925474143984!3d7.890750807948512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30503b7bfcd9f903%3A0xf7065fac1e3d7c48!2sDoubleTree%20by%20Hilton%20Phuket%20Banthai%20Resort!5e0!3m2!1sru!2sua!4v1595450987110!5m2!1sru!2sua"
-                width="347"
+                width="100%"
                 height="213"
                 frameborder="0"
                 style="border: 0;"
