fixed: fonts in booking Nunito, add  semiBold 600

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
       href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Nunito regular 400, bold 700 и  semiBold 600 -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Muli regular 400, bold 700-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Muli и Nonito -  отдельно
       
       <link
