--- a/index.html
+++ b/index.html
@@ -279,6 +279,26 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <div class="section newsletter">
+      <div class="newsletter-wrapper">
+        <h2 class="newsletter-title">
+          subscribe to our
+          <span class="newsletter-title__strong">Newsletter</span>
+        </h2>
+        <form action="#" class="subscribe newsletter__subscribe">
+          <input
+            type="text"
+            class="subscribe__input"
+            placeholder="Your email address"
+          />
+          <button class="subscribe__button">
+            Send
+          </button>
+        </form>
+      </div>
+      <!-- /.newsletter-wrapper -->
+    </div>
+    <!-- /.section newsletter -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
