--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <!-- /.hotel -->
     <div class="section newsletter">
       <div class="newsletter-wrapper">
-        <h2 class="newsletter-title">
+        <h2 class="newsletter-title newsletter__title">
           subscribe to our
           <span class="newsletter-title__strong">Newsletter</span>
         </h2>
