fix: hotel-slider images & responsive for reviews

--- a/index.html
+++ b/index.html
@@ -161,42 +161,42 @@
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-1.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-2.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-3.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-4.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-5.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-6.jpg"
                   alt="slide"
                 />
@@ -302,7 +302,7 @@
     <!-- /.section newsletter -->
     <section class="reviews">
       <div class="container">
-        <h2 class="reviews__title">What people thinks about us</h2>
+        <h2 class="reviews__title">What people thinks about&nbsp;us</h2>
         <!-- Slider main container -->
         <div class="swiper-container reviews-slider">
           <div class="swiper-wrapper">
