--- a/index.html
+++ b/index.html
@@ -447,66 +447,157 @@
             alt="Logo: Best Tour Plan"
             class="logo footer__logo"
           />
-          <div class="footer__list">
+          <div class="footer__list footer__categories">
             <h3 class="footer__title">ALL CATEGORIES</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">All Deals</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Hotels</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Activities</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Spa Packages</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Hotel Day Packages</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Restaurants</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Fitness</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Rodrigues</a>
+              </li>
+            </ul>
           </div>
-          <ul class="footer__ul">
-            <li class="footer__item">
-              <a href="#" class="footer__link">All Deals</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Hotels</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Activities</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Spa Packages</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Hotel Day Packages</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Restaurants</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Fitness</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Rodrigues</a>
-            </li>
-          </ul>
-          <!-- /.footer__list -->
-          <div class="footer__list">
+          <!-- /.footer__list footer__categories-->
+          <div class="footer__list footer__additional">
             <h3 class="footer__title">ADDITIONAL INFORMATION</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">About Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">How does it work?</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Frequently Asked Questions</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Deals.mu loyalty program</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link"
+                  >Promote your Business on BTP</a
+                >
+              </li>
+            </ul>
           </div>
-          <ul class="footer__ul">
-            <li class="footer__item">
-              <a href="#" class="footer__link">About Us</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Contact Us</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">How does it work?</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Frequently Asked Questions</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Deals.mu loyalty program</a>
-            </li>
-            <li class="footer__item">
-              <a href="#" class="footer__link">Promote your Business on BTP</a>
-            </li>
-          </ul>
-          <!-- /.footer__list -->
-          <div class="footer__soclial-netrwork">
+          <!-- /.footer__list footer__additional-->
+          <div class="footer__social-network">
             <h3 class="footer__title">Social Network</h3>
-            <div class="footer__social-links"></div>
+            <div class="footer__social-links">
+              <a href="#" class="footer__link"
+                ><img
+                  src="image/facebook.svg"
+                  alt="icon: facebook"
+                  class="footer__icon"
+              /></a>
+              <a href="#" class="footer__link"
+                ><img
+                  src="image/youtube.svg"
+                  alt="icon: youtube"
+                  class="footer__icon"
+              /></a>
+              <a href="#" class="footer__link"
+                ><img
+                  src="image/instagram.svg"
+                  alt="icon: instagram"
+                  class="footer__icon"
+              /></a>
+            </div>
             <!-- /.footer__social-links -->
           </div>
-          <!-- /.footer__soclial-netrwork -->
+          <!-- /.footer__social-network" -->
+          <div class="footer__list footer_legal">
+            <h3 class="footer__title">LEGAL INFORMATION</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms & Conditions</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Disclaimer</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Cancellation policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__list footer_legal -->
+          <div class="footer__contact-details">
+            <h3 class="footer__title">Contact Details</h3>
+            <p class="footer__text">
+              Feel free to contact us by phone, email or by our contact form
+            </p>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <img src="image/map-marker.svg" alt="icon: map" />9748 Blossom
+                Hill Rd undefined Lansing, Idaho 68545 United States
+              </li>
+              <li class="footer__item">
+                <img
+                  src="image/contact-phone-call.svg"
+                  alt="icon: contact phone"
+                />
+                Tel (business hours) : 269 1500 <br />
+                Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00
+                pm) <br />
+                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm) <br />
+              </li>
+              <li class="footer__item">
+                <img src="image/email.svg" alt="icon: email" />
+                cherly.lawson@example.com
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__contact-details -->
+          <div class="footer_contact-form">
+            <h3 class="footer__title">Send us a message</h3>
+            <form action="" class="footer__form">
+              <input
+                type="text"
+                class="input footer__input"
+                placeholder="Your Full Name*"
+              />
+              <input
+                type="text"
+                class="input footer__input"
+                placeholder="Phone Number*"
+              />
+              <textarea
+                cols="30"
+                rows="10"
+                class="footer__message"
+                placeholder="Message"
+              ></textarea>
+              <button class="button footer__button" type="submit">Send</button>
+              <span class="footer__info">* Required Fields</span>
+            </form>
+            <!-- /.footer__form -->
+          </div>
+          <!-- /.footer_contact-form -->
         </div>
         <!-- /.footer-wrapper -->
       </div>
