--- a/index.html
+++ b/index.html
@@ -504,19 +504,13 @@
           </div>
           <!-- /.footer__list footer__additional-->
           <div class="footer__social-network">
-            <h3 class="footer__title">Social Network</h3>
+            <h3 class="footer__title footer__title--inline">Social Network</h3>
             <div class="footer__social-links">
               <a href="#" class="footer__link"
-                ><img
-                  src="image/facebook.svg"
-                  alt="icon: facebook"
-                  class="footer__icon"
+                ><img src="image/facebook.svg" alt="icon: facebook"
               /></a>
               <a href="#" class="footer__link"
-                ><img
-                  src="image/youtube.svg"
-                  alt="icon: youtube"
-                  class="footer__icon"
+                ><img src="image/youtube.svg" alt="icon: youtube"
               /></a>
               <a href="#" class="footer__link"
                 ><img
@@ -547,34 +541,50 @@
           </div>
           <!-- /.footer__list footer_legal -->
           <div class="footer__contact-details">
-            <h3 class="footer__title">Contact Details</h3>
+            <h3 class="footer__title footer__title--mb3">Contact Details</h3>
             <p class="footer__text">
               Feel free to contact us by phone, email or by our contact form
             </p>
             <ul class="footer__ul">
-              <li class="footer__item">
-                <img src="image/map-marker.svg" alt="icon: map" />9748 Blossom
-                Hill Rd undefined Lansing, Idaho 68545 United States
+              <li class="footer__item footer__item--mb2">
+                <div class="footer__icon-wrapper">
+                  <img
+                    class="footer__icon"
+                    src="image/map-marker.svg"
+                    alt="icon: map"
+                  />
+                </div>
+                9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United
+                States
               </li>
-              <li class="footer__item">
-                <img
-                  src="image/contact-phone-call.svg"
-                  alt="icon: contact phone"
-                />
+              <li class="footer__item footer__item--mb2">
+                <div class="footer__icon-wrapper">
+                  <img
+                    class="footer__icon"
+                    src="image/contact-phone-call.svg"
+                    alt="icon: contact phone"
+                  />
+                </div>
                 Tel (business hours) : 269 1500 <br />
                 Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00
                 pm) <br />
                 Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm) <br />
               </li>
-              <li class="footer__item">
-                <img src="image/email.svg" alt="icon: email" />
+              <li class="footer__item footer__item--mb2">
+                <div class="footer__icon-wrapper">
+                  <img
+                    class="footer__icon"
+                    src="image/email.svg"
+                    alt="icon: email"
+                  />
+                </div>
                 cherly.lawson@example.com
               </li>
             </ul>
           </div>
           <!-- /.footer__contact-details -->
-          <div class="footer_contact-form">
-            <h3 class="footer__title">Send us a message</h3>
+          <div class="footer__contact-form">
+            <h3 class="footer__title footer__title--mb34">Send us a message</h3>
             <form action="" class="footer__form">
               <input
                 type="text"
@@ -597,7 +607,7 @@
             </form>
             <!-- /.footer__form -->
           </div>
-          <!-- /.footer_contact-form -->
+          <!-- /.footer__contact-form -->
         </div>
         <!-- /.footer-wrapper -->
       </div>
