added: footer responsive 992

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
             class="logo footer__logo"
           />
           <div class="footer__list footer__categories">
-            <h3 class="footer__title">ALL CATEGORIES</h3>
+            <h3 class="footer__title">ALL&nbsp;CATEGORIES</h3>
             <ul class="footer__ul">
               <li class="footer__item">
                 <a href="#" class="footer__link">All Deals</a>
@@ -523,7 +523,7 @@
           </div>
           <!-- /.footer__social-network" -->
           <div class="footer__list footer_legal">
-            <h3 class="footer__title">LEGAL INFORMATION</h3>
+            <h3 class="footer__title">LEGAL&nbsp;INFORMATION</h3>
             <ul class="footer__ul">
               <li class="footer__item">
                 <a href="#" class="footer__link">Terms & Conditions</a>
@@ -608,6 +608,17 @@
             <!-- /.footer__form -->
           </div>
           <!-- /.footer__contact-form -->
+          <div class="footer__bottom">
+            <a href="#" class="footer__bottom-link">Disclaimer</a>
+            <a href="#" class="footer__bottom-link">Conditions of use</a>
+            <a href="#" class="footer__bottom-link">Cancellation policy</a>
+          </div>
+          <!-- /.footer__bottom -->
+          <img
+            src="image/footer-bottom.jpg"
+            alt="footer-bottom"
+            class="footer__bottom-image"
+          />
         </div>
         <!-- /.footer-wrapper -->
       </div>
