added: responsive to footer section

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <a href="#" class="footer__link">Contact Us</a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">How does it work?</a>
+                <a href="#" class="footer__link">How does it&nbsp;work?</a>
               </li>
               <li class="footer__item">
                 <a href="#" class="footer__link">Frequently Asked Questions</a>
@@ -497,7 +497,7 @@
               </li>
               <li class="footer__item">
                 <a href="#" class="footer__link"
-                  >Promote your Business on BTP</a
+                  >Promote your Business on&nbsp;BTP</a
                 >
               </li>
             </ul>
@@ -602,8 +602,13 @@
                 class="footer__message"
                 placeholder="Message"
               ></textarea>
-              <button class="button footer__button" type="submit">Send</button>
-              <span class="footer__info">* Required Fields</span>
+
+              <div class="footer__button-list">
+                <button class="button footer__button" type="submit">
+                  Send
+                </button>
+                <span class="footer__info">* Required Fields</span>
+              </div>
             </form>
             <!-- /.footer__form -->
           </div>
