--- a/index.html
+++ b/index.html
@@ -21,16 +21,6 @@
       href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Muli и Nonito -  отдельно
-      
-      <link
-      href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap"
-      rel="stylesheet"
-    /> -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -367,17 +357,18 @@
           <span class="newsletter-title__strong">Newsletter</span>
         </h2>
         <form
-          action="#"
+          action="send.php"
+          method="POST"
           class="subscribe newsletter__subscribe form"
           data-aos="fade-left"
           data-aos-duration="1000"
         >
           <input
             type="email"
-            class="subscribe__input"
+            class="input subscribe__input"
             placeholder="Your email address*"
+            name="email-newsletter"
             required
-            name="email"
           />
           <button class="subscribe__button">
             Send
@@ -497,7 +488,7 @@
           <div
             class="card activities__card"
             data-aos="flip-left"
-            data-aos-delay="400"
+            data-aos-delay="300"
           >
             <img
               src="image/activity-2.jpg"
@@ -511,7 +502,7 @@
           <div
             class="card activities__card"
             data-aos="flip-left"
-            data-aos-delay="700"
+            data-aos-delay="500"
           >
             <img
               src="image/activity-3.jpg"
@@ -525,7 +516,7 @@
           <div
             class="card activities__card"
             data-aos="flip-left"
-            data-aos-delay="1000"
+            data-aos-delay="700"
           >
             <img
               src="image/activity-4.jpg"
@@ -551,7 +542,7 @@
             class="logo footer__logo"
             data-aos="zoom-in"
             data-aos-delay="300"
-            data-aos-duration="500"
+            data-aos-duration="400"
           />
           <div class="footer__list footer__categories">
             <h3 class="footer__title">ALL&nbsp;CATEGORIES</h3>
@@ -692,7 +683,8 @@
           <div
             class="footer__contact-form"
             data-aos="zoom-in"
-            data-aos-delay="900"
+            data-aos-delay="500"
+            data-aos-duration="500"
           >
             <h3 class="footer__title footer__title--mb34">Send us a message</h3>
             <form action="send.php" method="POST" class="footer__form form">
@@ -701,7 +693,7 @@
                   type="text"
                   class="input footer__input"
                   placeholder="Your Full Name*"
-                  name="name"
+                  name="name-footer"
                   required
                   minlength="2"
                 />
@@ -711,7 +703,7 @@
                   type="tel"
                   class="input footer__input"
                   placeholder="Phone Number*"
-                  name="phone"
+                  name="phone-footer"
                   required
                 />
               </div>
@@ -719,7 +711,7 @@
               <textarea
                 class="message footer__message"
                 placeholder="Message"
-                name="message"
+                name="message-footer"
               ></textarea>
 
               <div class="footer__button-list">
@@ -763,7 +755,7 @@
               type="text"
               class="input modal__input"
               placeholder="Your Full Name*"
-              name="name"
+              name="name-booking"
               required
               minlength="2"
             />
@@ -774,7 +766,7 @@
               type="tel"
               class="input modal__input"
               placeholder="Phone Number*"
-              name="phone"
+              name="phone-booking"
               required
             />
           </div>
@@ -784,7 +776,7 @@
               type="email"
               class="input modal__input"
               placeholder="Email*"
-              name="email"
+              name="email-booking"
               required
             />
           </div>
@@ -792,7 +784,7 @@
           <textarea
             class="message modal__message"
             placeholder="Message"
-            name="message"
+            name="message-booking"
           ></textarea>
 
           <div class="modal__button-list">
