--- a/thanksemail.html
+++ b/thanksemail.html
@@ -21,16 +21,6 @@
       href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Muli и Nonito -  отдельно
-      
-      <link
-      href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap"
-      rel="stylesheet"
-    /> -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -39,7 +29,7 @@
     <header class="navbar navbar--mobile_fixed">
       <div class="container">
         <div class="navbar-top">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img
               src="image/horizontal-logo.svg"
               alt="Logo: Best Tour Plan"
@@ -162,11 +152,14 @@
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
-              <h1 class="hotel-name hotel-info__name">Message sent</h1>
+              <h1 class="hotel-name hotel-info__name">
+                Thank you for submitting your subscription.
+              </h1>
             </div>
             <!-- /.hotel-wrapper -->
             <p class="hotel-description hotel-info__description">
-              Our manager will call you back within 15 minutes
+              Check your email to confirm your subscription. Please, click the
+              link in the email you receive to validate your subscription.
             </p>
           </div>
           <!-- /.hotel-info__text -->
