--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
-              <div class="stars offer__stars">
+              <div class="stars">
                 <img src="image/star.svg" alt="star" />
                 <img src="image/star.svg" alt="star" />
                 <img src="image/star.svg" alt="star" />
@@ -674,7 +674,12 @@
             </ul>
           </div>
           <!-- /.footer__contact-details -->
-          <div class="footer__contact-form">
+          <div
+            class="footer__contact-form"
+            data-aos="zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="500"
+          >
             <h3 class="footer__title footer__title--mb34">Send us a message</h3>
             <form action="send.php" method="POST" class="footer__form form">
               <div class="footer__input-group">
