added: jquery mask

--- a/thanksmessage.html
+++ b/thanksmessage.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Tour Plan - Hotel Booking</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
@@ -291,10 +293,17 @@
                     alt="icon: contact phone"
                   />
                 </div>
-                Tel (business hours) : 269 1500 <br />
-                Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00
-                pm) <br />
-                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm) <br />
+                <span
+                  >Tel (business hours) :
+                  <a class="link footer__link" href="269 1500">269 1500</a>
+                  <br />Tel (hotline) Monday - Saturday:
+                  <a class="link footer__link" href="52-56-61-38"
+                    >52-56-61-38</a
+                  >
+                  (08:00 am – 20:00 pm) <br />Tel (hotline) Sunday:
+                  <a class="link footer__link" href="52-56-61-38">52-56-61-38</a
+                  >(08:00 am – 14:00 pm) <br
+                /></span>
               </li>
               <li class="footer__item footer__item--mb2">
                 <div class="footer__icon-wrapper">
@@ -304,7 +313,9 @@
                     alt="icon: email"
                   />
                 </div>
-                cherly.lawson@example.com
+                <a class="link footer__link" href="52-56-61-38"
+                  >cherly.lawson@example.com</a
+                >
               </li>
             </ul>
           </div>
@@ -325,9 +336,7 @@
                 name="phone"
               />
               <textarea
-                cols="30"
-                rows="10"
-                class="footer__message"
+                class="message footer__message"
                 placeholder="Message"
                 name="message"
               ></textarea>
