--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>Best Tour Plan - Hotel Booking</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
-      rel="stylesheet"
-    />
 
     <!-- Nunito regular 400, bold 700 и  semiBold 600 -->
     <link
@@ -224,22 +220,22 @@
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="hotel-slider__image"
                   src="image/slide-1.jpg"
+                  class="hotel-slider__image"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="hotel-slider__image"
                   src="image/slide-2.jpg"
+                  class="hotel-slider__image"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="hotel-slider__image"
                   src="image/slide-3.jpg"
+                  class="hotel-slider__image"
                   alt="slide"
                 />
               </div>
@@ -345,7 +341,9 @@
       <div class="newsletter-wrapper">
         <h2 class="newsletter-title newsletter__title">
           <span class="newsletter-title__subscribe">subscribe to our</span>
-          <span class="newsletter-title__strong">Newsletter</span>
+          <span class="newsletter-title__strong newsletter-title__subscribe"
+            >Newsletter</span
+          >
         </h2>
         <form
           action="send.php"
@@ -634,6 +632,7 @@
                   <img
                     class="footer__icon"
                     src="image/map-marker.svg"
+                    src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
                     alt="icon: map"
                   />
                 </div>
@@ -645,13 +644,21 @@
                   <img
                     class="footer__icon"
                     src="image/contact-phone-call.svg"
+                    src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
                     alt="icon: contact phone"
                   />
                 </div>
-                Tel (business hours) : 269 1500 <br />
-                Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00
-                pm) <br />
-                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm) <br />
+                <span
+                  >Tel (business hours) :
+                  <a class="link footer__link" href="269-1500">269 1500</a>
+                  <br />Tel (hotline) Monday - Saturday:
+                  <a class="link footer__link" href="52-56-61-38"
+                    >52-56-61-38</a
+                  >
+                  (08:00 am – 20:00 pm) <br />Tel (hotline) Sunday:
+                  <a class="link footer__link" href="52-56-61-38">52-56-61-38</a
+                  >(08:00 am – 14:00 pm) <br
+                /></span>
               </li>
               <li class="footer__item footer__item--mb2">
                 <div class="footer__icon-wrapper">
@@ -661,7 +668,9 @@
                     alt="icon: email"
                   />
                 </div>
-                cherly.lawson@example.com
+                <a class="link footer__link" href="52-56-61-38"
+                  >cherly.lawson@example.com</a
+                >
               </li>
             </ul>
           </div>
@@ -686,8 +695,8 @@
               </div>
               <div class="footer__input-group">
                 <input
-                  type="tel"
-                  class="input footer__input"
+                  type="text"
+                  class="phone input footer__input"
                   placeholder="Phone Number*"
                   name="phone-footer"
                   required
@@ -749,8 +758,8 @@
 
           <div class="modal__input-group">
             <input
-              type="tel"
-              class="input modal__input"
+              type="text"
+              class="phone input modal__input"
               placeholder="Phone Number*"
               name="phone-booking"
               required
@@ -784,9 +793,11 @@
       <!-- /.modal__dialog -->
     </div>
     <!-- /.modal id booking-modal-->
+
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
